# agentic-bitcoin

./: .arch-view-layout.json  .gitignore  COMPLETE_DOMAIN_LAYER.txt  CRATES.md  Cargo.toml  DOMAIN_CODE_EXAMPLES.md  DOMAIN_LAYER_OVERVIEW.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  README.md  SESSION_NOTES.md  TESTING.md
crates/abtc-adapters/: Cargo.toml  README.md
crates/abtc-adapters/src/: lib.rs
crates/abtc-adapters/src/mempool/: mod.rs
crates/abtc-adapters/src/mining/: mod.rs
crates/abtc-adapters/src/network/: mod.rs  v2.rs
crates/abtc-adapters/src/rpc/: mod.rs
crates/abtc-adapters/src/storage/: mod.rs  rocksdb_store.rs
crates/abtc-adapters/src/wallet/: file_store.rs  mod.rs  persistent.rs
crates/abtc-application/: Cargo.toml  README.md
crates/abtc-application/src/: address_manager.rs  block_index.rs  block_template.rs  chain_events.rs  chain_state.rs  commands.rs  compact_blocks.rs  download_scheduler.rs  fee_estimator.rs  handlers.rs  lib.rs  mempool_acceptance.rs  miner.rs  net_processing.rs  orphan_pool.rs  package_relay.rs  peer_scoring.rs  queries.rs  rebroadcast.rs  services.rs
crates/abtc-application/tests/: chain_state_tests.rs
crates/abtc-domain/: Cargo.toml  FILES_CREATED.txt  README.md
crates/abtc-domain/src/: hashing.rs  lib.rs
crates/abtc-domain/src/chain_params/: mod.rs
crates/abtc-domain/src/consensus/: connect.rs  mod.rs  params.rs  rules.rs  signet.rs  validation.rs
crates/abtc-domain/src/covenants/: ctv.rs  mod.rs  vault.rs
crates/abtc-domain/src/crypto/: bip324.rs  hashing.rs  mod.rs  schnorr.rs  signing.rs  taproot.rs
crates/abtc-domain/src/filters/: block_filter.rs  gcs.rs  messages.rs  mod.rs
crates/abtc-domain/src/policy/: limits.rs  mod.rs  packages.rs  rbf.rs
crates/abtc-domain/src/primitives/: amount.rs  block.rs  hash.rs  mod.rs  public_key.rs  script_types.rs  transaction.rs
crates/abtc-domain/src/protocol/: codec.rs  messages.rs  mod.rs  types.rs
crates/abtc-domain/src/script/: checker_impl.rs  interpreter.rs  mod.rs  opcodes.rs  script.rs  witness.rs
crates/abtc-domain/src/script/miniscript/: compiler.rs  decode.rs  fragment.rs  mod.rs  policy.rs  types.rs
crates/abtc-domain/src/utxo/: coin.rs  mod.rs  muhash.rs  snapshot.rs
crates/abtc-domain/src/wallet/: address.rs  coin_selection.rs  hd.rs  keys.rs  mod.rs  psbt.rs  tx_builder.rs
crates/abtc-domain/src/wallet/descriptors/: checksum.rs  compiler.rs  descriptor.rs  key_expr.rs  mod.rs  parser.rs
crates/abtc-domain/tests/: benchmarks.rs  block_validation_tests.rs  script_tests.rs  tx_validation_tests.rs
crates/abtc-domain/tests/data/: script_tests.json
crates/abtc-infrastructure/: Cargo.toml  README.md
crates/abtc-infrastructure/src/: lib.rs
crates/abtc-ports/: Cargo.toml  README.md
crates/abtc-ports/src/: lib.rs
crates/abtc-ports/src/mempool/: mod.rs
crates/abtc-ports/src/mining/: mod.rs
crates/abtc-ports/src/network/: mod.rs
crates/abtc-ports/src/rpc/: mod.rs
crates/abtc-ports/src/storage/: mod.rs
crates/abtc-ports/src/wallet/: mod.rs  store.rs
crates/btc-adapters/: Cargo.toml
crates/btc-adapters/src/: lib.rs
crates/btc-adapters/src/mempool/: mod.rs
crates/btc-adapters/src/mining/: mod.rs
crates/btc-adapters/src/network/: mod.rs
crates/btc-adapters/src/rpc/: mod.rs
crates/btc-adapters/src/storage/: mod.rs  rocksdb_store.rs
crates/btc-adapters/src/wallet/: mod.rs
crates/btc-application/: Cargo.toml
crates/btc-application/src/: block_index.rs  block_template.rs  chain_events.rs  chain_state.rs  commands.rs  compact_blocks.rs  download_scheduler.rs  fee_estimator.rs  handlers.rs  lib.rs  mempool_acceptance.rs  miner.rs  net_processing.rs  orphan_pool.rs  peer_scoring.rs  queries.rs  rebroadcast.rs  services.rs
crates/btc-application/tests/: chain_state_tests.rs
crates/btc-domain/: Cargo.toml  FILES_CREATED.txt  README.md  STRUCTURE.md
crates/btc-domain/src/: lib.rs
crates/btc-domain/src/chain_params/: mod.rs
crates/btc-domain/src/consensus/: connect.rs  mod.rs  params.rs  rules.rs  validation.rs
crates/btc-domain/src/crypto/: hashing.rs  mod.rs  schnorr.rs  signing.rs  taproot.rs
crates/btc-domain/src/policy/: limits.rs
crates/btc-domain/src/primitives/: amount.rs  block.rs  mod.rs  transaction.rs
crates/btc-domain/src/script/: interpreter.rs  mod.rs  opcodes.rs  witness.rs
crates/btc-domain/src/wallet/: address.rs  hd.rs  mod.rs  psbt.rs  tx_builder.rs
crates/btc-domain/tests/: benchmarks.rs  block_validation_tests.rs  script_tests.rs  tx_validation_tests.rs
crates/btc-domain/tests/data/: script_tests.json
crates/btc-infrastructure/: Cargo.toml
crates/btc-infrastructure/src/: lib.rs
crates/btc-ports/: Cargo.toml
crates/btc-ports/src/: lib.rs
crates/btc-ports/src/mempool/: mod.rs
crates/btc-ports/src/mining/: mod.rs
crates/btc-ports/src/network/: mod.rs
crates/btc-ports/src/storage/: mod.rs
crates/btc-ports/src/wallet/: mod.rs
docs/architecture/: README.md
reviews/: agentic-bitcoin-architecture-review-gemini.md  all-markdown-comments-2026-02-22-codex.md  architecture-implementation-plan-2026-02-22-codex.md  architecture-review-2026-02-22-codex.md  architecture-review.md  claude-markdown-comments-2026-02-22-codex.md  code-review-2026-02-21.md  code-review-2026-02-22-codex-extra-high.md  code-review-2026-02-22-codex-independent.md  code-review-2026-02-22.md  code-review-response-2026-02-22.md  code-review-response-notes.md  documentation-fixes-pending.md
reviews/dependency-reviews/: abtc-domain.md
src/: lib.rs  main.rs
