[workspace]
members = [
    "crates/abtc-domain",
    "crates/abtc-ports",
    "crates/abtc-adapters",
    "crates/abtc-application",
    "crates/abtc-infrastructure",
]
resolver = "2"

[package]
name = "agentic-bitcoin"
version = "0.1.0"
edition = "2021"
description = "A from-scratch reimplementation of Bitcoin Core in Rust with hexagonal architecture"
license = "MIT"
repository = "https://github.com/casey-bowman/agentic-bitcoin"
homepage = "https://github.com/casey-bowman/agentic-bitcoin"
keywords = ["bitcoin", "agentic", "clean-architecture", "hexagonal", "ports-and-adapters"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
abtc-infrastructure = { path = "crates/abtc-infrastructure", version = "0.1.0" }
tokio = { version = "1.35", features = ["full"] }

[[bin]]
name = "agentic-bitcoin"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
