[workspace]
members = [
    "crates/abtc-domain",
    "crates/abtc-ports",
    "crates/abtc-adapters",
    "crates/abtc-application",
    "crates/abtc-infrastructure",
]
resolver = "2"

[package]
name = "agentic-bitcoin"
version = "0.2.0"
edition = "2021"
description = "A from-scratch reimplementation of Bitcoin Core in Rust with hexagonal architecture"
license = "MIT"
repository = "https://github.com/casey-bowman/agentic-bitcoin"
homepage = "https://github.com/casey-bowman/agentic-bitcoin"
readme = "README.md"
keywords = ["bitcoin", "agentic", "clean-architecture", "hexagonal", "ports-and-adapters"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Casey Bowman <case.bowman@gmail.com>", "Claude Opus 4.6"]
rust-version = "1.84"

[lib]
name = "agentic_bitcoin"
path = "src/lib.rs"

[dependencies]
abtc-domain = { path = "crates/abtc-domain", version = "0.2.0" }
abtc-ports = { path = "crates/abtc-ports", version = "0.2.0" }
abtc-adapters = { path = "crates/abtc-adapters", version = "0.2.0" }
abtc-application = { path = "crates/abtc-application", version = "0.2.0" }
abtc-infrastructure = { path = "crates/abtc-infrastructure", version = "0.2.0" }
tokio = { version = "1.35", features = ["full"] }

[[bin]]
name = "agentic-bitcoin"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
