[package]
name = "abtc-adapters"
version = "0.1.0"
edition = "2021"
description = "In-memory adapter implementations for Agentic-Bitcoin port traits"
license = "MIT"
repository = "https://github.com/casey-bowman/agentic-bitcoin"
homepage = "https://github.com/casey-bowman/agentic-bitcoin"
keywords = ["bitcoin", "agentic", "clean-architecture", "hexagonal", "ports-and-adapters"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = []
rocksdb-storage = ["rocksdb"]

[dependencies]
abtc-domain = { path = "../abtc-domain", version = "0.1.0" }
abtc-ports = { path = "../abtc-ports", version = "0.1.0" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
thiserror = "1.0"
rocksdb = { version = "0.22", optional = true }
