[package]
name = "abtc-application"
version = "0.1.0"
edition = "2021"
description = "Agentic-Bitcoin application services — chain state, P2P processing, mining, fee estimation, mempool, and more"
license = "MIT"
repository = "https://github.com/casey-bowman/agentic-bitcoin"
homepage = "https://github.com/casey-bowman/agentic-bitcoin"
keywords = ["bitcoin", "agentic", "clean-architecture", "hexagonal", "ports-and-adapters"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
abtc-domain = { path = "../abtc-domain", version = "0.1.0" }
abtc-ports = { path = "../abtc-ports", version = "0.1.0" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
abtc-adapters = { path = "../abtc-adapters", version = "0.1.0" }
