[package]
name = "btc-adapters"
version = "0.1.0"
edition = "2021"
description = "Concrete adapter implementations for Bitcoin ports"
license = "MIT"

[features]
default = []
rocksdb-storage = ["rocksdb"]

[dependencies]
btc-domain = { path = "../btc-domain" }
btc-ports = { path = "../btc-ports" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
thiserror = "1.0"
rocksdb = { version = "0.22", optional = true }
