[package]
name = "btc-domain"
version = "0.1.0"
edition = "2021"
description = "Bitcoin domain layer - pure domain logic with zero infrastructure dependencies"
license = "MIT"

[dependencies]
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
secp256k1 = { version = "0.29", features = ["global-context"] }

[dev-dependencies]
